--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,10 @@ notifications:
   email: false
 node_js:
   - '8'
-  - '6'
+  - '10'
+  - 'lts/*'
 before_script:
   - npm prune
-after_success:
-  - npm run semantic-release
 branches:
   except:
     - /^v\d+\.\d+\.\d+$/
