--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "@dadi/logger",
-  "version": "0.0.0-development",
+  "version": "1.4.2",
   "description": "DADI Logger",
   "main": "dadi/index.js",
   "scripts": {
     "format": "prettier --no-semi --single-quote --write '{dadi,test}/**/*.js' && standard --fix '{dadi,test/**}/*.js'",
-    "test": "standard 'dadi/index.js' && ./node_modules/.bin/istanbul cover --report cobertura --report text --report html --report lcov ./node_modules/.bin/_mocha test",
+    "test": "standard 'dadi/index.js' && ./node_modules/.bin/nyc --reporter=lcov ./node_modules/.bin/_mocha test && ./node_modules/.bin/nyc report",
     "posttest": "./scripts/coverage.js",
     "postpublish": "greenkeeper-postpublish",
-    "precommit": "lint-staged",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "precommit": "lint-staged"
   },
   "lint-staged": {
     "dadi/**/*.js": [
@@ -35,7 +34,7 @@
   "license": "ISC",
   "dependencies": {
     "@dadi/log-filter": "^1.0.0",
-    "aws-kinesis-writable": "^2.0.0",
+    "aws-kinesis-writable": "^4.0.0",
     "bunyan": "^1.8.5",
     "kinesis": "^1.2.2",
     "memorystream": "^0.3.1",
@@ -46,12 +45,11 @@
     "chai": "^3.5.0",
     "coveralls": "^3.0.1",
     "greenkeeper-postpublish": "^1.0.1",
-    "istanbul": "^0.4.5",
     "jasmine": "^2.5.2",
     "lint-staged": "^7.2.0",
     "mocha": "^5.2.0",
+    "nyc": "^14.1.1",
     "prettier": "^1.13.6",
-    "semantic-release": "^8.2.0",
     "standard": "^8.6.0"
   }
 }
